@@ -2,6 +2,9 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  10 Jun 2010; Rion <rion4ik@notagmail.com> psi-9999.ebuild:
+  ebuild synced with portage
+
   29 Apr 2010; Rion <rion4ik@notagmail.com> psi-9999.ebuild:
   changed webkit configure option in the upstream
 
